# ChessSFML

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/: bishop.hpp  board.hpp  game.hpp  king.hpp  knight.hpp  pawn.hpp  piece.hpp  queen.hpp  rook.hpp  slider.hpp  uci.hpp
src/: bishop.cpp  board.cpp  board.hpp  game.cpp  game.hpp  king.cpp  knight.cpp  main.cpp  pawn.cpp  piece.cpp  piece.hpp  piece_constants.hpp  queen.cpp  rook.cpp  slider.cpp  uci.cpp
